--- a/Presentation/Modules/Deck/View/DeckViewController.storyboard
+++ b/Presentation/Modules/Deck/View/DeckViewController.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ebh-mb-J0C">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ebh-mb-J0C">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -39,7 +41,7 @@
                                                                 </connections>
                                                             </button>
                                                         </subviews>
-                                                        <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="40" id="Ijt-iD-Sek"/>
                                                             <constraint firstAttribute="bottom" secondItem="o90-k7-EUm" secondAttribute="bottom" id="S3f-Rl-pbQ"/>
@@ -71,7 +73,7 @@
                                                                 </connections>
                                                             </button>
                                                         </subviews>
-                                                        <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                                                         <constraints>
                                                             <constraint firstItem="6jw-zP-3SF" firstAttribute="leading" secondItem="gkG-kK-fQ1" secondAttribute="leading" id="2fG-k3-Bap"/>
                                                             <constraint firstAttribute="trailing" secondItem="6jw-zP-3SF" secondAttribute="trailing" id="CrI-yX-a51"/>
@@ -104,7 +106,7 @@
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jvN-ws-aBX" customClass="DeckPreviewView" customModule="Presentation" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="229" width="355" height="213"/>
-                                        <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="jvN-ws-aBX" secondAttribute="height" multiplier="320:192" id="jnS-Tx-oee"/>
                                         </constraints>
@@ -119,7 +121,7 @@
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9DX-Rw-Vi6" userLabel="DeckDescriptionView" customClass="DeckDescriptionView" customModule="Presentation" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="452" width="355" height="45"/>
-                                        <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="45" id="LVm-Ab-o1E"/>
                                         </constraints>
@@ -135,7 +137,7 @@
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Oym-D7-UaV" userLabel="DeckCreateView">
                                         <rect key="frame" x="0.0" y="507" width="355" height="80"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GuD-kE-Qs5">
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GuD-kE-Qs5">
                                                 <rect key="frame" x="10" y="10" width="335" height="60"/>
                                                 <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="17"/>
                                                 <state key="normal" title="Deck Change">
@@ -146,7 +148,7 @@
                                                 </connections>
                                             </button>
                                         </subviews>
-                                        <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                                         <constraints>
                                             <constraint firstAttribute="trailing" secondItem="GuD-kE-Qs5" secondAttribute="trailing" constant="10" id="3Io-0d-b4f"/>
                                             <constraint firstItem="GuD-kE-Qs5" firstAttribute="leading" secondItem="Oym-D7-UaV" secondAttribute="leading" constant="10" id="TGs-MV-oQA"/>
@@ -183,7 +185,8 @@
                                 </constraints>
                             </stackView>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="ERi-tN-PEG"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="IgQ-2g-zex" firstAttribute="leading" secondItem="ERi-tN-PEG" secondAttribute="leading" constant="10" id="6Hi-kq-xTt"/>
                             <constraint firstItem="IgQ-2g-zex" firstAttribute="centerX" secondItem="Lca-IT-thV" secondAttribute="centerX" id="DYQ-nx-nmM"/>
@@ -191,9 +194,9 @@
                             <constraint firstItem="ERi-tN-PEG" firstAttribute="bottom" secondItem="IgQ-2g-zex" secondAttribute="bottom" constant="10" id="Qx9-Wo-d0m"/>
                             <constraint firstItem="IgQ-2g-zex" firstAttribute="top" secondItem="ERi-tN-PEG" secondAttribute="top" constant="10" id="vJn-e3-b8u"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="ERi-tN-PEG"/>
                     </view>
                     <connections>
+                        <outlet property="deckChangeButton" destination="GuD-kE-Qs5" id="kfW-yN-KQi"/>
                         <outlet property="deckDescritpionView" destination="9DX-Rw-Vi6" id="7iu-Sj-6eL"/>
                         <outlet property="deckPreviewView" destination="jvN-ws-aBX" id="wgu-bo-qnJ"/>
                         <outlet property="deckSelectionView" destination="vEW-iG-63f" id="tXa-1b-0vr"/>
@@ -209,5 +212,11 @@
     <resources>
         <image name="plus.square.on.square" catalog="system" width="128" height="113"/>
         <image name="square.and.arrow.up" catalog="system" width="115" height="128"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
