--- a/Presentation/Modules/DeckCreate/View/Custom/CardSort/CardSortView.xib
+++ b/Presentation/Modules/DeckCreate/View/Custom/CardSort/CardSortView.xib
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CardSortView" customModule="Presentation" customModuleProvider="target">
             <connections>
+                <outlet property="cardCollectionTitleLabel" destination="8q9-sG-YuU" id="4KK-4h-qpd"/>
                 <outlet property="cardFoundLabel" destination="avY-tr-jZF" id="U8M-lT-vb9"/>
+                <outlet property="cardFoundTitleLabel" destination="Wtg-MM-XGv" id="xrt-S9-YbF"/>
                 <outlet property="sortButton" destination="rdi-hW-8Rc" id="Tkl-Dc-WPg"/>
             </connections>
         </placeholder>
@@ -19,23 +23,26 @@
                 <stackView opaque="NO" contentMode="scaleToFill" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="NvB-hN-nlQ">
                     <rect key="frame" x="10" y="5" width="394" height="40"/>
                     <subviews>
-                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Z1c-Lm-vqR">
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="3" translatesAutoresizingMaskIntoConstraints="NO" id="Z1c-Lm-vqR">
                             <rect key="frame" x="0.0" y="0.0" width="234" height="40"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yRa-YR-QIc" userLabel="SpaceView">
-                                    <rect key="frame" x="0.0" y="0.0" width="234" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="234" height="1.5"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </view>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Card Collection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8q9-sG-YuU" customClass="HiraginoLabel" customModule="Presentation" customModuleProvider="target">
-                                    <rect key="frame" x="0.0" y="5" width="234" height="12"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Card Collection" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8q9-sG-YuU" customClass="HiraginoLabel" customModule="Presentation" customModuleProvider="target">
+                                    <rect key="frame" x="0.0" y="4.5" width="234" height="15"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="15" id="4gQ-Ej-fkK"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="15"/>
                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IFG-ge-9bA">
-                                    <rect key="frame" x="0.0" y="22" width="234" height="13"/>
+                                    <rect key="frame" x="0.0" y="22.5" width="234" height="13"/>
                                     <subviews>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Found：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wtg-MM-XGv" customClass="HiraginoLabel" customModule="Presentation" customModuleProvider="target">
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Found：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Wtg-MM-XGv" customClass="HiraginoLabel" customModule="Presentation" customModuleProvider="target">
                                             <rect key="frame" x="0.0" y="0.0" width="53.5" height="13"/>
                                             <fontDescription key="fontDescription" name="HiraginoSans-W3" family="Hiragino Sans" pointSize="13"/>
                                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -50,7 +57,7 @@
                                     </subviews>
                                 </stackView>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PQl-B4-r5e" userLabel="SpaceView">
-                                    <rect key="frame" x="0.0" y="40" width="234" height="0.0"/>
+                                    <rect key="frame" x="0.0" y="38.5" width="234" height="1.5"/>
                                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </view>
                             </subviews>
@@ -58,9 +65,9 @@
                                 <constraint firstItem="PQl-B4-r5e" firstAttribute="height" secondItem="yRa-YR-QIc" secondAttribute="height" id="lRG-8V-lgV"/>
                             </constraints>
                         </stackView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdi-hW-8Rc" userLabel="SortButton">
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rdi-hW-8Rc" userLabel="SortButton">
                             <rect key="frame" x="244" y="0.0" width="150" height="40"/>
-                            <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <color key="backgroundColor" systemColor="systemGray2Color"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="150" id="WLs-vX-EbC"/>
                             </constraints>
@@ -98,4 +105,9 @@
             <point key="canvasLocation" x="139" y="108"/>
         </view>
     </objects>
+    <resources>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+    </resources>
 </document>
