--- a/Presentation/Modules/SignIn/View/SignInViewController.storyboard
+++ b/Presentation/Modules/SignIn/View/SignInViewController.storyboard
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RvU-Wz-6Oh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="RvU-Wz-6Oh">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -31,7 +33,7 @@
                                     </imageView>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="scE-s5-D3m" customClass="SignInDescriptionView" customModule="Presentation" customModuleProvider="target">
                                         <rect key="frame" x="37.5" y="173.5" width="300" height="300"/>
-                                        <color key="backgroundColor" systemColor="systemGreenColor" red="0.20392156859999999" green="0.78039215689999997" blue="0.34901960780000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemGreenColor"/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="scE-s5-D3m" secondAttribute="height" multiplier="1:1" id="Xd8-Cv-ZyE"/>
                                         </constraints>
@@ -45,9 +47,9 @@
                                         <fontDescription key="fontDescription" name="HiraginoSans-W6" family="Hiragino Sans" pointSize="16"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocj-Ec-3Pb">
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ocj-Ec-3Pb">
                                         <rect key="frame" x="37.5" y="553.5" width="300" height="60"/>
-                                        <color key="backgroundColor" systemColor="systemGray2Color" red="0.68235294120000001" green="0.68235294120000001" blue="0.69803921570000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        <color key="backgroundColor" systemColor="systemGray2Color"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="60" id="WnM-sO-Nxf"/>
                                         </constraints>
@@ -91,6 +93,7 @@
                                 </constraints>
                             </view>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="7km-GW-sGv"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="eDm-TF-eID" firstAttribute="top" secondItem="7km-GW-sGv" secondAttribute="top" id="13q-Bc-gUH"/>
@@ -102,13 +105,13 @@
                             <constraint firstItem="7km-GW-sGv" firstAttribute="trailing" secondItem="eDm-TF-eID" secondAttribute="trailing" id="tqE-hR-kAW"/>
                             <constraint firstItem="eDm-TF-eID" firstAttribute="leading" secondItem="7km-GW-sGv" secondAttribute="leading" id="vjq-KI-CpE"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="7km-GW-sGv"/>
                     </view>
                     <connections>
                         <outlet property="descriptionView" destination="scE-s5-D3m" id="iAl-Rb-YWA"/>
                         <outlet property="indicator" destination="I59-fX-Lau" id="wlX-JX-cgJ"/>
                         <outlet property="inputPlayerTagTextField" destination="SBj-yJ-g7G" id="6sQ-3d-PeT"/>
                         <outlet property="loadingView" destination="eDm-TF-eID" id="ZhK-iq-i1s"/>
+                        <outlet property="signInButton" destination="ocj-Ec-3Pb" id="x0S-J4-OCF"/>
                         <outlet property="stackView" destination="hka-Es-e0e" id="0MU-Le-yYz"/>
                         <outlet property="stackViewCenterYConstraint" destination="eFU-Mb-3vf" id="dye-xc-jrN"/>
                     </connections>
@@ -120,5 +123,11 @@
     </scenes>
     <resources>
         <image name="Register_logo" width="2048" height="2048"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
     </resources>
 </document>
